--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "axios": "^1.6.0",
     "iconsax-react": "^0.0.8",
     "react": "^18.2.0",
+    "react-credit-cards": "^0.8.3",
+    "react-credit-cards-2": "^1.0.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.18.0"
